link para arquivos

--- a/Enershoes/cadastro.html
+++ b/Enershoes/cadastro.html
@@ -11,9 +11,9 @@ LUCAS DA SILVA RA: 20511359
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
       <title>Cadastro | Enershoes</title>
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="stylesheet" type="text/css" href="http://localhost/Enershoes/lib/fonts/css/font-awesome.css">
-      <link type="text/css" rel="stylesheet" href="http://localhost/Enershoes/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
-      <link rel="stylesheet" type="text/css" href="http://localhost/Enershoes/css/style.css">
+      <link rel="stylesheet" type="text/css" href="lib/fonts/css/font-awesome.css">
+      <link type="text/css" rel="stylesheet" href="lib/materialize/css/materialize.min.css"  media="screen,projection"/>
+      <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="bower_components/toastr/toastr.css">
    </head>
    <body >
@@ -22,18 +22,18 @@ LUCAS DA SILVA RA: 20511359
             <div class="container">
                <div class="nav-wrapper">
                   <div id="logo-container">
-                     <a href="http://localhost/Enershoes/index.php"><img width="40" class="icon hide-on-med-and-down" src="images/raio_circ2.png" alt=""></a>
-                     <a href="http://localhost/Enershoes/index.php" class="brand-logo">enershoes</a>
+                     <a href="index.php"><img width="40" class="icon hide-on-med-and-down" src="images/raio_circ2.png" alt=""></a>
+                     <a href="index.php" class="brand-logo">enershoes</a>
                   </div>
                   <div class="menu-container">
                      <ul id="menu" class="right">
-                        <li><a href="http://localhost/Enershoes/sobre.php">Sobre</a>
+                        <li><a href="sobre.php">Sobre</a>
                         </li>
                         <li ><a href="#">Masculino</a>
                         </li>
                         <li ><a href="#">Feminino</a>
                         </li>
-                        <li ><a href="http://localhost/Enershoes/cadastro.php">Login/Cadastre-se</a>
+                        <li ><a href="cadastro.php">Login/Cadastre-se</a>
                         </li>
                         <li ><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                            </a>
@@ -151,7 +151,7 @@ LUCAS DA SILVA RA: 20511359
 
 
       <script type="text/javascript" src='bower_components/toastr/toastr.js'></script>
-      <script type="text/javascript" src="http://localhost/Enershoes/lib/materialize/js/materialize.min.js"></script>
+      <script type="text/javascript" src="lib/materialize/js/materialize.min.js"></script>
 
 
       <script type="text/javascript">
