--- a/Enershoes/index.html
+++ b/Enershoes/index.html
@@ -11,9 +11,9 @@ LUCAS DA SILVA RA: 20511359
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
         <title>Home | Enershoes</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="http://localhost/Enershoes/lib/fonts/css/font-awesome.css">
-        <link type="text/css" rel="stylesheet" href="http://localhost/Enershoes/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
-        <link rel="stylesheet" type="text/css" href="http://localhost/Enershoes/css/style.css">
+        <link rel="stylesheet" type="text/css" href="lib/fonts/css/font-awesome.css">
+        <link type="text/css" rel="stylesheet" href="lib/materialize/css/materialize.min.css"  media="screen,projection"/>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body >
         <div class="navbar-fixed">
@@ -21,18 +21,18 @@ LUCAS DA SILVA RA: 20511359
                 <div class="container">
                     <div class="nav-wrapper">
                         <div id="logo-container">
-                            <a href="http://localhost/Enershoes/index.php"><img width="40" class="icon hide-on-med-and-down" src="images/raio_circ2.png" alt=""></a>
-                            <a href="http://localhost/Enershoes/index.php" class="brand-logo">enershoes</a>
+                            <a href="index.php"><img width="40" class="icon hide-on-med-and-down" src="images/raio_circ2.png" alt=""></a>
+                            <a href="index.php" class="brand-logo">enershoes</a>
                         </div>
                         <div class="menu-container">
                             <ul id="menu" class="right">
-                                <li><a href="http://localhost/Enershoes/sobre.php">Sobre</a>
+                                <li><a href="sobre.php">Sobre</a>
                                 </li>
                                 <li ><a href="#">Masculino</a>
                                 </li>
                                 <li ><a href="#">Feminino</a>
                                 </li>
-                                <li ><a href="http://localhost/Enershoes/cadastro.php">Login/Cadastre-se</a>
+                                <li ><a href="cadastro.php">Login/Cadastre-se</a>
                                 </li>
                                 <li ><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                     </a>
@@ -52,14 +52,14 @@ LUCAS DA SILVA RA: 20511359
                                 <div class="col s12 m4  l12 ">
                                     <div class="card">
                                         <div class="card-image waves-effect waves-block waves-light">
-                                            <a href="http://localhost/Enershoes/detalhes.php">
+                                            <a href="detalhes.php">
                                             <img src="images/Masculino/Masculino1.png" class="responsive-img" alt="">
                                             </a>
                                         </div>
                                         <div class="card-content">
-                                            <p class="area"><a href="http://localhost/Enershoes/detalhes.php">ENERSHOES</a>
+                                            <p class="area"><a href="detalhes.php">ENERSHOES</a>
                                             </p>
-                                            <a href="http://localhost/Enershoes/detalhes.php" ><span class="card-title activator black-text text-darken-4">Masculino</span></a>
+                                            <a href="detalhes.php" ><span class="card-title activator black-text text-darken-4">Masculino</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -68,14 +68,14 @@ LUCAS DA SILVA RA: 20511359
                                 <div class="col s12 m4  l12 ">
                                     <div class="card">
                                         <div class="card-image waves-effect waves-block waves-light">
-                                            <a href="http://localhost/Enershoes/detalhes.php">
+                                            <a href="detalhes.php">
                                             <img src="images/Masculino/Masculino2.png" class="responsive-img" alt="">
                                             </a>
                                         </div>
                                         <div class="card-content">
-                                            <p class="area"><a href="http://localhost/Enershoes/detalhes.php">ENERSHOES</a>
+                                            <p class="area"><a href="detalhes.php">ENERSHOES</a>
                                             </p>
-                                            <a href="http://localhost/Enershoes/detalhes.php" ><span class="card-title activator black-text text-darken-4">Masculino</span></a>
+                                            <a href="detalhes.php" ><span class="card-title activator black-text text-darken-4">Masculino</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -84,14 +84,14 @@ LUCAS DA SILVA RA: 20511359
                                 <div class="col s12 m4  l12 ">
                                     <div class="card">
                                         <div class="card-image waves-effect waves-block waves-light">
-                                            <a href="http://localhost/Enershoes/detalhes.php">
+                                            <a href="detalhes.php">
                                             <img src="images/Masculino/Masculino4.png" class="responsive-img" alt="">
                                             </a>
                                         </div>
                                         <div class="card-content">
-                                            <p class="area"><a href="http://localhost/Enershoes/detalhes.php">ENERSHOES</a>
+                                            <p class="area"><a href="detalhes.php">ENERSHOES</a>
                                             </p>
-                                            <a href="http://localhost/Enershoes/detalhes.php" ><span class="card-title activator black-text text-darken-4">Masculino</span></a>
+                                            <a href="detalhes.php" ><span class="card-title activator black-text text-darken-4">Masculino</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -100,14 +100,14 @@ LUCAS DA SILVA RA: 20511359
                                 <div class="col s12 m4  l12 ">
                                     <div class="card">
                                         <div class="card-image waves-effect waves-block waves-light">
-                                            <a href="http://localhost/Enershoes/detalhes.php">
+                                            <a href="detalhes.php">
                                             <img src="images/Feminino/Feminino1.png" class="responsive-img" alt="">
                                             </a>
                                         </div>
                                         <div class="card-content">
-                                            <p class="area"><a href="http://localhost/Enershoes/detalhes.php">ENERSHOES</a>
+                                            <p class="area"><a href="detalhes.php">ENERSHOES</a>
                                             </p>
-                                            <a href="http://localhost/Enershoes/detalhes.php" ><span class="card-title activator black-text text-darken-4">Feminino</span></a>
+                                            <a href="detalhes.php" ><span class="card-title activator black-text text-darken-4">Feminino</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -116,14 +116,14 @@ LUCAS DA SILVA RA: 20511359
                                 <div class="col s12 m4  l12 ">
                                     <div class="card">
                                         <div class="card-image waves-effect waves-block waves-light">
-                                            <a href="http://localhost/Enershoes/detalhes.php">
+                                            <a href="detalhes.php">
                                             <img src="images/Feminino/Feminino2.png" class="responsive-img" alt="">
                                             </a>
                                         </div>
                                         <div class="card-content">
-                                            <p class="area"><a href="http://localhost/Enershoes/detalhes.php">ENERSHOES</a>
+                                            <p class="area"><a href="detalhes.php">ENERSHOES</a>
                                             </p>
-                                            <a href="http://localhost/Enershoes/detalhes.php" ><span class="card-title activator black-text text-darken-4">Feminino</span></a>
+                                            <a href="detalhes.php" ><span class="card-title activator black-text text-darken-4">Feminino</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -132,14 +132,14 @@ LUCAS DA SILVA RA: 20511359
                                 <div class="col s12 m4  l12 ">
                                     <div class="card">
                                         <div class="card-image waves-effect waves-block waves-light">
-                                            <a href="http://localhost/Enershoes/detalhes.php">
+                                            <a href="detalhes.php">
                                             <img src="images/Feminino/Feminino4.png" class="responsive-img" alt="">
                                             </a>
                                         </div>
                                         <div class="card-content">
-                                            <p class="area"><a href="http://localhost/Enershoes/detalhes.php">ENERSHOES</a>
+                                            <p class="area"><a href="detalhes.php">ENERSHOES</a>
                                             </p>
-                                            <a href="http://localhost/Enershoes/detalhes.php" ><span class="card-title activator black-text text-darken-4">Feminino</span></a>
+                                            <a href="detalhes.php" ><span class="card-title activator black-text text-darken-4">Feminino</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -185,7 +185,7 @@ LUCAS DA SILVA RA: 20511359
         </footer>
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-        <script type="text/javascript" src="http://localhost/Enershoes/lib/materialize/js/materialize.min.js"></script>
+        <script type="text/javascript" src="lib/materialize/js/materialize.min.js"></script>
           <script type="text/javascript">
 
 
