--- a/Enershoes/detalhes.html
+++ b/Enershoes/detalhes.html
@@ -11,9 +11,9 @@ LUCAS DA SILVA RA: 20511359
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <title>Detalhes | Enershoes</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="http://localhost/Enershoes/lib/fonts/css/font-awesome.css">
-    <link type="text/css" rel="stylesheet" href="http://localhost/Enershoes/lib/materialize/css/materialize.min.css"  media="screen,projection"/>
-    <link rel="stylesheet" type="text/css" href="http://localhost/Enershoes/css/style.css">
+    <link rel="stylesheet" type="text/css" href="lib/fonts/css/font-awesome.css">
+    <link type="text/css" rel="stylesheet" href="lib/materialize/css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
       <link rel="stylesheet" type="text/css" href="bower_components/toastr/toastr.css">
   </head>
@@ -23,18 +23,18 @@ LUCAS DA SILVA RA: 20511359
         <div class="container">
           <div class="nav-wrapper">
             <div id="logo-container">
-              <a href="http://localhost/Enershoes/index.php"><img width="40" class="icon hide-on-med-and-down" src="images/raio_circ2.png" alt=""></a>
-              <a href="http://localhost/Enershoes/index.php" class="brand-logo">enershoes</a>
+              <a href="index.php"><img width="40" class="icon hide-on-med-and-down" src="images/raio_circ2.png" alt=""></a>
+              <a href="index.php" class="brand-logo">enershoes</a>
             </div>
             <div class="menu-container">
               <ul id="menu" class="right">
-                <li><a href="http://localhost/Enershoes/sobre.php">Sobre</a>
+                <li><a href="sobre.php">Sobre</a>
                 </li>
                 <li ><a href="#">Masculino</a>
                 </li>
                 <li ><a href="#">Feminino</a>
                 </li>
-                <li ><a href="http://localhost/Enershoes/cadastro.php">Login/Cadastre-se</a>
+                <li ><a href="cadastro.php">Login/Cadastre-se</a>
                 </li>
                 <li ><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
                   </a>
@@ -53,7 +53,7 @@ LUCAS DA SILVA RA: 20511359
               <div class="row">
                 <div class="col l8 s12">
                   <h2>Enershoes Feminino</h2>
-                  <img src="http://localhost/Enershoes/images/Feminino/Feminino3" class="responsive-img" alt="">
+                  <img src="images/Feminino/Feminino3" class="responsive-img" alt="">
                   <div class="row" id="instagram-photos"></div>
                 </div>
                 <div class="col l4 s12">
@@ -142,7 +142,7 @@ LUCAS DA SILVA RA: 20511359
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script type="text/javascript" src='bower_components/toastr/toastr.js'></script>
-    <script type="text/javascript" src="http://localhost/Enershoes/lib/materialize/js/materialize.min.js"></script>
+    <script type="text/javascript" src="lib/materialize/js/materialize.min.js"></script>
       <script type="text/javascript">
 
 
