iniciando meu site

--- a/index.html
+++ b/index.html
@@ -12,30 +12,11 @@
     <meta httpequiv="XUACompatible" content="IE=8" />
     <meta name="keywords" content="" />
     <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" href="scss/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/css/libs/material.indigo-pink.min.css">
+    <script defer src="/css/libs/material.min.css"></script>
   </head>
   <body>
-    <nav class="sidebar coluna-2">
-      <img src="#" class="logo" />
-      <ul>
-        <li>
-          <a href="#"><span>About me</span></a>
-        </li>
-        <li>
-          <a href="#"><span>Competences</span></a>
-        </li>
-        <li>
-          <a href="#"><span>Jobs</span></a>
-        </li>
-        <li>
-          <a href="#"><span>Personal</span></a>
-        </li>
-        <li>
-          <a href="#"><span>Contact</span></a>
-        </li>
-      </ul>
-    </nav>
-    <div class="content coluna-10">
-    </div>
+    
   </body>
 </html>
