init personal site

--- a/index.html
+++ b/index.html
@@ -1,22 +1,66 @@
-<!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <title>Raldney Sampaio Alves</title>
-    <!-- GOOGLE FONTS -->
-    <link href='https://fonts.googleapis.com/css1e59.css?family=Yellowtail%7cCabin:400,500,600,700,400italic,700italic%7cLibre+Baskerville:400italic%7cGreat+Vibes%7cOswald:400,300,700%7cOpen+Sans:600italic,700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/cssc9c7.css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
-    <!-- META TAGS -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="" />
-    <meta httpequiv="XUACompatible" content="IE=8" />
-    <meta name="keywords" content="" />
-    <meta name="robots" content="index, follow" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="/css/libs/material.indigo-pink.min.css">
-    <script defer src="/css/libs/material.min.css"></script>
-  </head>
-  <body>
-    
-  </body>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Raldney Sampaio Alves</title>
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" media="screen" href="./libs/particle/css/style.css">
+  <link rel="stylesheet" media="screen" href="./css/style.css">
+
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+</head>
+
+<body style="">
+  <!-- Fixed navbar -->
+  <nav id="header" class="navbar navbar-fixed-top fixed-theme">
+    <div id="header-container" class="container navbar-container fixed-theme">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a id="brand" class="navbar-brand fixed-theme" href="#">Raldney</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">Habilidades</a></li>
+          <li><a href="#about">Sobre</a></li>
+          <li><a href="#contact">Contato</a></li>
+        </ul>
+      </div>
+      <!-- /.nav-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <!-- /.navbar -->
+
+  <header class="home">
+    <!-- particles.js container -->
+    <div id="particles-js"></div>
+    <!-- scripts -->
+
+  </header>
+  <iframe frameborder=0 width="800" height="600" src="https://reports.zoho.com/ZDBDataSheetView.cc?OBJID=1438497000000066002&STANDALONE=true&privatelink=ab59b5238cb1c72a731f77c96b8c9ee4&WIDTH=800&HEIGHT=600&INTERVAL=-1&DATATYPESYMBOL=true&REMTOOLBAR=false&SEARCHBOX=true&INCLUDETITLE=true&INCLUDEDESC=true&SHOWHIDEOPT=true"></iframe>
+
+  <!-- <div class="container">
+    <div class="row">
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="100%x280" style="height: 280px; width: 360px; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22356%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20356%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15e305d427d%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A18pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15e305d427d%22%3E%3Crect%20width%3D%22356%22%20height%3D%22280%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22131.2890625%22%20y%3D%22148.1%22%3E356x280%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+          data-holder-rendered="true">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div> -->
+
+  <!--/.container-->
+  <script src="./libs/particles.js"></script>
+  <script src="./libs/particle/js/app.js"></script>
+  <script src="./js/script.js"></script>
+</body>
+
 </html>
